<resources>
    <string name="app_name">WaterWorks</string>
    <string name="title_activity_home_maps">Map</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="condition">Condition</string>
    <string name="cppm">Contaminant PPM</string>
    <string name="vppm">Virus PPM</string>
    <string name="lat_input">Latitude (enter a value between -90 and 90)</string>
    <string name="lon_input">Longitude (enter a value between -180 and 180)</string>
    <string name="water_type">Water Type</string>
    <string name="welcome">Welcome to Waterworks!</string>
    <string name="login">Login</string>
    <string name="login_success">You are logged in</string>
    <string name="create_source_report">Create Water Source Report</string>
    <string name="list_source_report">List All Water Source Reports</string>
    <string name="create_purity_report">Create Water Purity Report</string>
    <string name="list_purity_report">List All Water Purity Reports</string>
    <string name="create_history_report">Create History Report</string>
    <string name="profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="view_map">View Map</string>
    <string name="purity_reports">All Water Purity Reports</string>
    <string name="source_reports">All Water Source Reports</string>
    <string name="clear">Clear</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="start_date">04/01/2017</string>
    <string name="start_date_input">Start Date (mm/dd/yyyy)</string>
    <string name="end_date">04/30/2017</string>
    <string name="end_date_input">End Date (mm/dd/yyyy)</string>
    <string name="location">Location (Longitude, Latitude)</string>
    <string name="radius">Radius (miles)</string>
    <string name="register">Register</string>
    <string name="filter">Filter</string>
    <string name="title">Title</string>
    <string name="email">Email Address</string>
    <string name="address">Mailing Address</string>
    <string name="birthday">Birthday</string>
    <string name="done">Done</string>
    <string name="purity_labels"> (id) (loc) (auth) (cond) (v. ppm) (c. ppm) (date)</string>
    <string name="source_labels">     (id) (location) (auth) (type) (cond) (rating) (date)</string>
    <string name="attempts"> login attempt(s) left</string>
</resources>
