<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:background="@mipmap/filler" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/lon_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrLongID" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/wrLong" />

    <TextView
        android:text="@string/lat_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrLatID" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/wrLat" />


    <TextView
        android:id="@+id/wrTypeID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/water_type" />

    <Spinner
        android:id="@+id/wrType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp" />

    <TextView
        android:text="@string/condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrCondID" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrCond"
        android:layout_marginBottom="26dp" />

    <Button
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrSubmitButton" />

    <Button
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrCancelButton" />



</LinearLayout>