<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:background="#DCDCDD" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#7A6563"
        android:id="@+id/profTitleID" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textCursorDrawable="@null"
        android:id="@+id/profTitle" />

    <TextView
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#7A6563"
        android:id="@+id/profEmailID" />

    <EditText
        android:id="@+id/profEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textCursorDrawable="@null" />

    <TextView
        android:text="@string/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#7A6563"
        android:id="@+id/profAddressID" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textCursorDrawable="@null"
        android:id="@+id/profAddress" />

    <TextView
        android:text="@string/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#7A6563"
        android:id="@+id/profBDayID" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:textCursorDrawable="@null"
        android:id="@+id/profBDay" />

    <Button
        android:text="@string/done"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#7A6563"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/profDoneBTN" />
</LinearLayout>