<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_graph_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="team64.waterworks.controllers.SplashActivity">


    <TextView
        android:id="@+id/start_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/start_date_input" />

    <EditText
        android:id="@+id/editText_Start_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/start_date_text"
        android:ems="10"
        android:inputType="date"
        android:text="@string/start_date"/>

    <TextView
        android:id="@+id/end_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_Start_Date"
        android:layout_marginTop="10dp"
        android:text="@string/end_date_input" />

    <EditText
        android:id="@+id/editText_End_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:layout_below="@+id/end_date_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/end_date"/>

    <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_below="@+id/editText_End_Date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <EditText
        android:id="@+id/editText_Longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_below="@+id/location_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/editText_Latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_Longitude"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/radius_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_Latitude"
        android:layout_marginTop="13dp"
        android:text="@string/radius" />

    <EditText
        android:id="@+id/editText_Radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radius_text"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>
