<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/filler"
    tools:context="team64.waterworks.controllers.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"/>

    <EditText
        android:id = "@+id/reg_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="text"/>

    <TextView
        android:id = "@+id/pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@id/reg_user"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id = "@+id/reg_password"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "textPassword"
        android:layout_below="@id/pass_text"/>

    <Button
        android:id="@+id/reg_cancel"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/cancel"/>


    <Button
        android:id = "@+id/reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/reg_cancel"
        android:layout_alignBottom="@+id/reg_cancel"
        android:layout_toRightOf="@+id/reg_cancel"
        android:layout_toEndOf="@+id/reg_cancel"
        android:text = "@string/register"/>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerAcctType"
        android:layout_marginBottom="26dp"
        android:layout_above="@+id/reg_cancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
